[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "box_orientation"
version = "0.1.0"
description = "Multi-camera application for determining the orientation of boxes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/box_orientation"]
